end fullFunctionaly no refactr

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -39,3 +39,9 @@ header{
     font-size: 18px;
     text-decoration: none;
 }
+
+
+.icons_block > a {
+    text-decoration: none;
+    color : white;
+}
